updated feeding tube and pgsga

--- a/cava_nlp/_context_config.json
+++ b/cava_nlp/_context_config.json
@@ -10,7 +10,7 @@
    "direction": "BIDIRECTIONAL",
    "max_targets": 1},
   {"category": "HISTORICAL",
-   "literal": "ago",
+   "literal": "ago",  
    "pattern": [{"LOWER": {"in": ["ago", "previously", "otherwise"]}}],
    "direction": "BACKWARD",
    "max_targets": 1},
@@ -20,14 +20,19 @@
    "direction": "FORWARD"},
   {"category": "HYPOTHETICAL",
    "literal": "if",
-   "pattern": [{"LOWER": "if"}],
+   "pattern": [{"LOWER": {"in":["if", "consider", "potential", "possible"]}}],
    "direction": "FORWARD",
    "max_targets": 1},
   {"category": "CURRENT",
    "literal": "current",
-   "pattern": [{"LOWER": {"in":["current", "is", "now"]}}],
+   "pattern": [{"LOWER": {"in":["current", "is", "now", "continue", "remains", "still", "ongoing"]}}],
    "direction": "FORWARD",
    "max_targets": 1},
+   {"category": "CURRENT",
+    "literal": "current",
+    "pattern": [{"LOWER": {"in":["insitu"]}}],
+    "direction": "BACKWARD",
+    "max_targets": 1},
   {"category": "CURRENT",
    "literal": "currently",
    "pattern": [{"LOWER": {"in":["currently", "presently", "chronically"]}}],
@@ -37,6 +42,15 @@
    "literal": "on discharge",
    "pattern": [{"LOWER": {"in":["on", "at"]}}, {"LOWER": {"in": ["present", "discharge"]}}],
    "direction": "BIDIRECTIONAL"},
+  {"category": "NEGATED_EXISTENCE",
+  "literal": "to avoid",
+  "pattern": null,
+  "direction": "FORWARD"},
+  {"category": "NEGATED_EXISTENCE",
+    "literal": "nil",
+    "pattern": null,
+    "direction": "FORWARD"},
+
   {"category": "TERMINATE",
    "literal": "but",
    "pattern": [{"LOWER": "but"}],
