--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,22 @@
+[tool.poetry]
+name = "cava_nlp"
+version = "0.3.0"
+description = ""
+authors = ["georgie <georgina.kennedy@unsw.edu.au>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.11"
+spacy = "^3.7"
+medspacy = "^1.3"
+striprtf = "^0.0.2"
+python-dateutil = "^2"
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.2"
+pandas = "^2.2.2"
+openpyxl = "^3.1.2"
+
 [build-system]
-requires = ["setuptools", "wheel", "numpy"]
-build-backend = "setuptools.build_meta:__legacy__"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
