--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,24 @@
-[tool.poetry]
-name = "cava_nlp"
-version = "0.3.0"
-description = ""
-authors = ["georgie <georgina.kennedy@unsw.edu.au>"]
+[project]
+name = "cava-nlp"
+version = "1.0"
+description = "CaVa Platform Natural Language Processing spaCy components and pipeline"
 readme = "README.md"
 
-[tool.poetry.dependencies]
-python = "^3.11"
-spacy = "^3.7"
-medspacy = "^1.3"
-striprtf = "^0.0.2"
-python-dateutil = "^2"
+# note that once medspacy updates pysbd dependency 
+# we can upgrade to spacy 3.8+ and numpy 2+ and python 3.12+
+# but for now, pysbd is not compatible with python 3.12 
+# regex escape sequences
 
-[tool.poetry.group.dev.dependencies]
-ipykernel = "^6.29.2"
-pandas = "^2.2.2"
-openpyxl = "^3.1.2"
+requires-python = ">=3.11,<3.12"
+dependencies = [
+    "numpy==1.24.4",
+    "medspacy==1.3.0",
+    "striprtf==0.0.2",
+    "python-dateutil==2.8.2",
+    "dateparser>=1.2.2",
+]
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = [
+    "pytest>=9.0.1",
+]
