--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "striprtf==0.0.2",
     "python-dateutil==2.8.2",
     "dateparser>=1.2.2",
+    "pyyaml>=6.0.3",
 ]
 
 [dependency-groups]
