--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,13 @@ dependencies = [
 dev = [
     "pytest>=9.0.1",
 ]
+
+[build-system]
+requires = ["setuptools>=61", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.package-data]
+"*" = ["*.json"]
