initial context updates and configurable entity labels

--- a/cava_nlp/context/_context_config.json
+++ b/cava_nlp/context/_context_config.json
@@ -1498,7 +1498,7 @@
       "pattern": [
         {
           "LOWER": {
-            "IN": ["was", "is", "are"]
+            "IN": ["was", "is", "are", "returned"]
           }
         },
         {
@@ -1507,7 +1507,8 @@
           }
         }
       ],
-      "direction": "BACKWARD"
+      "direction": "BACKWARD",
+      "max_targets": 1
     },
     {
       "category": "NEGATED_EXISTENCE",
