--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,10 @@ version = "1.0"
 description = "CaVa Platform Natural Language Processing spaCy components and pipeline"
 readme = "README.md"
 
-# note that once medspacy updates pysbd dependency 
-# we can upgrade to spacy 3.8+ and numpy 2+ and python 3.12+
-# but for now, pysbd is not compatible with python 3.12 
-# regex escape sequences
+# pysbd is is not compatible with python3.12 so even though it installs with 3.12, do not use the medspacy sentencizer with 3.12 at this time
 
-requires-python = ">=3.11,<3.12"
+requires-python = ">=3.11,<3.13"
 dependencies = [
-    "numpy==1.24.4",
     "medspacy==1.3.0",
     "striprtf==0.0.2",
     "python-dateutil==2.8.2",
