better test cases for missing entities, time normalisation fixes, serialisation of dates

--- a/cava_nlp/rule_engine/engine_config/dietetics.yaml
+++ b/cava_nlp/rule_engine/engine_config/dietetics.yaml
@@ -19,6 +19,7 @@ components:
       span_label: pgsga
       entity_label: MALNUTRITION
       value_type: str
+      value_aggregation: join
       patterns:
         pgsga:
           value_patterns: ${rulesets.pgsga.value}
