--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,104 @@
-*.egg-info
-*.iml
-*.pyc
+# -------------------------------------------------
+# Python
+# -------------------------------------------------
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# -------------------------------------------------
+# Virtual environments
+# -------------------------------------------------
+.venv/
+venv/
+env/
+ENV/
+.ENV/
+.python-version
+.pipvenv/
+
+# -------------------------------------------------
+# Packaging / build artifacts
+# -------------------------------------------------
+build/
+dist/
+.eggs/
+*.egg-info/
+.eggs/
+*.bundle
+# Wheels
+*.whl
+
+# -------------------------------------------------
+# Testing / coverage
+# -------------------------------------------------
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+coverage.xml
+
+# -------------------------------------------------
+# Type checkers
+# -------------------------------------------------
+.mypy_cache/
+.pyright/
+.dmypy.json
+dmypy.json
+
+# -------------------------------------------------
+# Jupyter
+# -------------------------------------------------
+.ipynb_checkpoints/
+
+# -------------------------------------------------
+# Logs
+# -------------------------------------------------
+*.log
+
+# -------------------------------------------------
+# IDEs / Editors
+# -------------------------------------------------
+.vscode/
+.idea/
 *.swp
-/.cache
-/.coverage
-/.idea
-/.python
-/build
-/dist
-/htmlcov
-/pylint.html
-*.ipynb*
-/input
-*bundle
-*.log
-*pwd_override*
-*.log
-*.log.*
-*_old*
-*ohdsi*
-pysqlite3*
-/transformer_models
-/resources
-/__MAC*
-.vscode
-Pipfile.lock
-*.ipynb
+*.swo
+*~
+
+# -------------------------------------------------
+# OS files
+# -------------------------------------------------
 .DS_Store
-old
+Thumbs.db
+
+# -------------------------------------------------
+# dotenv / secrets
+# -------------------------------------------------
+.env
+.env.*
+!.env.example
+
+# -------------------------------------------------
+# Poetry / Pipenv / uv
+# -------------------------------------------------
+poetry.lock
+Pipfile.lock
+uv.lock
+
+# -------------------------------------------------
+# Airflow (if applicable)
+# -------------------------------------------------
+airflow.cfg
+airflow.db
+logs/
+
+# -------------------------------------------------
+# Local databases
+# -------------------------------------------------
+*.sqlite
+*.sqlite3
+test*
