--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cava-nlp"
-version = "0.8"
+version = "0.8.1"
 description = "CaVa Platform Natural Language Processing spaCy components and pipeline"
 readme = "README.md"
 
@@ -9,7 +9,7 @@ readme = "README.md"
 requires-python = ">=3.11,<3.13"
 dependencies = [
     "medspacy==1.3.0",
-    "striprtf==0.0.2",
+    "striprtf>=0.0.2",
     "python-dateutil==2.8.2",
     "dateparser>=1.2.2",
     "pyyaml>=6.0.3",
