--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cava-nlp"
-version = "0.8.3"
+version = "0.8.4"
 description = "CaVa Platform Natural Language Processing spaCy components and pipeline"
 readme = "README.md"
 
@@ -33,6 +33,7 @@ include-package-data = true
   "namespaces/**/*.json",
   "rule_engine/*.yaml",
   "rule_engine/**/*.yaml",
+  "context/*.json"
 ]
 
 [project.optional-dependencies]
