egfr exclusions needed to be made explicit

--- a/cava_nlp/rule_engine/engine_config/core.yaml
+++ b/cava_nlp/rule_engine/engine_config/core.yaml
@@ -35,6 +35,7 @@ components:
         egfr:
           value: egfr
           token_patterns: ${rulesets.egfr.token}
+          exclusions: ${rulesets.egfr.exclusions}
         braf:
           value: braf
           token_patterns: ${rulesets.braf.token}
